styles/index.css
/* ... */
header {
  background: url(/images/Punos-Silas.webp);
  background-size: cover;
}

/* NAVIGATION BAR */
.navi {
  background-color: var(--header--background-color);
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

.collapsible__content {
  max-height: 0;
  opacity: 0;
  overflow: hidden;
  transition: all 0.3s;
}

.collapsible--expanded .collapsible__content {
  max-height: 100vh;
  opacity: 1;
}

.navi--logo .material-icons {
  font-size: 4rem;
  padding: 0.5rem 0.5rem;
}

.navi.collapsible--expanded .navi--dropdown-mobile-icon {
  border-radius: 5px;
  box-shadow: 0 0 0 3px rgb(93, 250, 21);
  opacity: 1;
}

.navi--dropdown-mobile-icon {
  border-radius: 5px;
  cursor: pointer;
  height: 6rem;
  margin: 0.5rem 1rem;
  opacity: 0.7;
  transition: box-shadow 0.25s;
  width: 6rem;
}

.navi a {
  color: var(--color-white);
  padding: 0.7rem 0.5rem;
  text-decoration: none;
  transition: color 0.3s;
}

.navi a:hover {
  color: var(--color-lightgreen);
}

.navi--list {
  list-style: none;
  margin: 0;
  padding: 0 2rem;
  width: 100%;
}

.navi--icon {
  color: var(--color-white);
  font-size: 1.3rem;
  padding: 0.5rem 0.5rem;
}

.navi--category {
  border-bottom: 1px solid #222;
  font-size: 1.8rem;
  font-weight: bold;
  letter-spacing: 0.3rem;
  padding-top: 1.2rem;
}

/* NON-MOBILE */
@media screen and (min-width: 768px) {
  .collapsible__content {
    opacity: 1;
    overflow: visible;
  }

  .navi--dropdown-mobile-icon {
    display: none;
  }

  .navi--list {
    display: flex;
    width: auto;
  }

  .navi--category {
    border: 0;
    font-size: 1.8rem;
    padding: 1.5rem 0;
    padding-left: 1rem;
  }

  .material-icons {
    font-size: 1.8rem;
    padding: 0.2rem;
  }
}

@media screen and (min-width: 1024px) {
  .navi--logo .material-icons {
    font-size: 2rem;
    padding: 0.5rem 4rem;
  }

  .navi--category {
    font-size: 1.5rem;
    padding-right: 2rem;
    padding-top: 1.2rem;
  }

  .material-icons {
    font-size: 1.2rem;
  }
}

/* MAIN GREETING */

.main--greeting {
  min-height: 25rem;
  position: relative;
}

.main--heading-evan {
  color: var(--color-lightblue);
  background-color: var(--header--background-color);
  font-family: "Josefin Sans", sans-serif;
  font-size: 19rem;
  left: 0;
  padding: 0;
  margin: 0;
  position: absolute;
  top: 2rem;
  transform: rotate(-10deg);
}

.main--heading-apos {
  color: var(--color-lightblue);
  font-family: "Josefin Sans", sans-serif;
  font-size: 3rem;
  left: 38.5rem;
  position: absolute;
  top: 1rem;
  transform: rotate(15deg);
}

.main--subheading-professional {
  color: var(--color-lightblue);
  font-family: "Noto Serif Display", serif;
  font-size: 3rem;
  left: 18.5rem;
  position: absolute;
  text-transform: uppercase;
  top: 14.2rem;
}

.main--subheading-portfolio {
  color: var(--color-lightblue);
  font-family: "Noto Serif Display", serif;
  font-size: 2.2rem;
  left: 24.2rem;
  position: absolute;
  text-transform: uppercase;
  top: 17.3rem;
}

/* NONMOBILE */
@media screen and (min-width: 650px) {
  .main--heading-evan {
    font-size: 22rem;
    left: 13rem;
    top: -1rem;
  }

  .main--heading-apos {
    font-size: 5rem;
    left: 59rem;
    top: -1rem;
  }

  .main--subheading-professional {
    left: 35.5rem;
    top: 14.2rem;
  }

  .main--subheading-portfolio {
    left: 42.2rem;
    top: 17.5rem;
  }
}

@media screen and (min-width: 768px) {
  .main--greeting {
    min-height: 38rem;
  }

  .main--heading-evan {
    font-size: 26rem;
    left: 15rem;
    top: 2rem;
  }

  .main--heading-apos {
    font-size: 4rem;
    left: 69rem;
    top: 3rem;
  }

  .main--subheading-professional {
    left: 45.5rem;
    top: 21rem;
  }

  .main--subheading-portfolio {
    left: 52.2rem;
    top: 24.5rem;
  }
}

@media screen and (min-width: 1024px) {
  .main--heading-evan {
    font-size: 27rem;
    left: 31rem;
    top: 1.5rem;
    transform: rotate(-7deg);
  }

  .main--heading-apos {
    left: 87rem;
    top: 3rem;
  }

  .main--subheading-professional {
    left: 70.5rem;
  }

  .main--subheading-portfolio {
    left: 75.2rem;
  }
}

@media screen and (min-width: 1400px) {
  .main--heading-evan {
    font-size: 29rem;
    left: 51rem;
    top: 2.5rem;
    transform: rotate(-8deg);
  }

  .main--heading-apos {
    font-size: 4rem;
    left: 111rem;
    top: 4rem;
  }

  .main--subheading-professional {
    left: 95rem;
    top: 24rem;
  }

  .main--subheading-portfolio {
    left: 100rem;
    top: 27.2rem;
  }
}

@media screen and (min-width: 1600px) {
  .main--heading-evan {
    font-size: 35rem;
    left: 69rem;
    top: -1.5rem;
    transform: rotate(-15deg);
  }

  .main--heading-apos {
    font-size: 3rem;
    left: 140rem;
    top: -1rem;
  }

  .main--subheading-professional {
    left: 115rem;
  }

  .main--subheading-portfolio {
    left: 120rem;
  }
}

/* MAIN INTRODUCTION */
.main--intro {
  display: block;
  min-height: 55rem;
  padding: 2rem 0;
  background-color: var(--header--background-color);
}

.intro--description {
  margin: 5rem 0;
  text-shadow: -5px -5px 1px blueviolet;
}

.intro--description h2 {
  color: var(--color-lightgreen);
  text-transform: uppercase;
  letter-spacing: 1rem;
  font-size: 5rem;
  line-height: normal;
  margin: 0 2rem;
}

.intro--title-cell {
  display: flex;
  justify-content: right;
  margin: 5rem 0;
  margin-right: 8rem;
}

.intro--title-cell p {
  color: pink;
  font-size: 2rem;
  letter-spacing: 1rem;
  margin-bottom: 0;
  text-shadow: -5px -5px 1px blueviolet;
  text-transform: uppercase;
}

.intro--list-cell {
  display: flex;
  justify-content: right;
}

.intro--list {
  color: pink;
  list-style: none;
  margin-top: 1.5rem;
  padding: 0 2rem;
}

.intro--list-item {
  font-size: 1.9rem;
  font-weight: 700;
  letter-spacing: 0.7rem;
  padding: 0.7rem;
  text-align: right;
  text-shadow: -5px -5px 1px blueviolet;
}
/* ... */

